# Microservices

./: .gitignore
student-management-microservices/: pyproject.toml
student-management-microservices/Mock_ai_server/: mock-ai-server.py
student-management-microservices/auth-service/: .env.example  .env.test  README.md  alembic.ini  requirements.txt
student-management-microservices/auth-service/alembic/: env.py  script.py.mako
student-management-microservices/auth-service/app/: main.py
student-management-microservices/auth-service/tests/: conftest.py  factories.py  test_auth_login.py  test_auth_me.py  test_auth_register.py  test_auth_verify.py  test_dependencies.py  test_security.py
student-management-microservices/document-service/: pytest.ini  requirements.txt
student-management-microservices/document-service/alembic/: env.py
student-management-microservices/document-service/app/: main.py
student-management-microservices/document-service/tests/: conftest.py  test_document_auth.py  test_document_upload_security.py
student-management-microservices/frontend/: index.html
student-management-microservices/gateway/: requirements.txt
student-management-microservices/gateway/app/: main.py  openapi_merge.py  proxy.py
student-management-microservices/gateway/tests/: test_gateway.py
student-management-microservices/shared/auth/: constants.py  dependencies.py  jwt.py  uuid_type.py
student-management-microservices/shared/common/: pagination.py  responses.py
student-management-microservices/student-service/: .env.example  requirements.txt
(+98 files in other folders)
