[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "sms-shared"
version = "0.1.0"
description = "Shared utilities for student management microservices"
requires-python = ">=3.11"

dependencies = [
    "python-jose[cryptography]",
]


[tool.setuptools.packages.find]
include = [
    "shared*"
]